welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: ')' expected but 'return' found.
		if ((tea<5 && candy<5) return 1
                                       ^